--- a/style.css
+++ b/style.css
@@ -1,40 +1,95 @@
-#score {
-    color: #5A6772;
-    text-align: center;
-    font-size: 30px;
+*
+{
+  margin:0;
+  padding:0;
 }
 
-.grid #question {
-    font-family: "monospace";
-    font-size: 30px;
-    color: #5A6772;
+.row
+{
+  max-width:1140px;
+  margin:0 auto;
+}
+body{
+  font-family: tahoma;
+}
+.title
+{
+  position:absolute;
+  width : 1140px;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+}
+header
+{
+  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0, 0, 0, 0.7)),url(1.png);
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+}
+h1{
+  color: white;
 }
 
-.buttons {
-    margin-top: 30px;
+.main-nav
+{
+  list-style: none;
+  float: right;
+  margin-top: 10px;
+}
+.main-nav li
+{
+  display: inline-block;
+  margin-left: 205px;
+}
+.main-nav li a
+{
+  color: #c40310;
+  text-decoration: none;
+  font-size: 90%;
+  font-weight: bold;
+  margin-top: 20%;
 }
 
-#btn0, #btn1, #btn2, #btn3 {
-    background-color: #778897;
-    width: 250px;
-    font-size: 20px;
-    color: #fff;
-    border: 1px solid #1D3C6A;
-    border-radius: 50px;
-    margin: 10px 40px 10px 0px;
-    padding: 10px 10px;
+.logo img{
+  height :90px;
+  float: left;
+  margin-top:10px;
+  transform: translate(-70%,10%);
 }
 
-#btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
-    cursor: pointer;
-    background-color: #57636e;
+.main-nav li a:hover
+{
+  color: #e67e22;
+  border-bottom: 2px solid  #e67e22;
+  transition: all 0.5s ease-in;
+  padding: 15px 0;
 }
 
-#btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus {
-    outline: 0;
+.btn
+{
+  border :1px solid #e67e22;
+  padding :10px 30px;
+  color: #e67e22;
+  text-decoration: none;
+  border-radius: 12px;
+  background-color:linear-gradient(rgba(0,0,0,0.7),rgba(0, 0, 0, 0.7)),url(1.png);
+  margin-right: 15px;
+}
+.buttonclass
+{
+  margin-top:40px;
+}
+.btn-lore
+{
+  background-color:#e67e22;
+  color: white;
+
 }
 
-#progress {
-    color: #2b2b2b;
-    font-size: 18px;
+.btn-rules:hover
+{
+  background-color: #e67e22;
+  color: #c40310;
+  transition: all 1.2s ease-in;
 }
