--- a/gamelore.css
+++ b/gamelore.css
@@ -1,4 +1,65 @@
 
-.backgroundimg{
-  background-image: url("test1.jpg");
+header{
+  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url("Images/test1.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 200vh;
+
+  }
+  .card-header
+  {
+    list-style: none;
+    float: center;
+    font-size: 24px;
+    font-weight: bold;
+    width: 200%;
+    margin-top: 5px;
+    transform: translateX(-25%);
+  }
+.card-header li
+{
+  display: inline-block;
+  margin-left: 300px;
+}
+.card-header li a
+{
+  color: #c40310;
+  text-decoration: none;
+  font-size: 70%;
+  font-weight: bold;
+
+}
+.card-header li a:hover
+{
+  color: #424ef4;
+  border-bottom: 1px solid  #424ef4;
+  transition: all 0.5s ease-in;
+  padding: 10px 0;
+}
+  .card-header
+{
+  text-align: center;
+  background-color: #e67e22;
+}
+.gamelore
+{
+
+  width: 80%;
+  height:60%;
+}
+.gamelore li
+{
+  display: block;
+  width : 32%;
+  float: left;
+}
+.photo img{
+  width: auto;
+  height: auto;
+  transform: scale(1.15);
+  transition: all 0.5s;
+}
+.photo img:hover
+{
+  transform: scale(1.05);
 }
