--- a/CSS/contactus.css
+++ b/CSS/contactus.css
@@ -1,6 +1,6 @@
 header
 {
-  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url("C:/Users/sanjay/Desktop/Project/Images/new.jpg");
+  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url("../Images/new.jpg");
   background-position: center;
   background-size: cover;
   height: 100vh;
