--- a/CSS/gamelore.css
+++ b/CSS/gamelore.css
@@ -1,6 +1,6 @@
 
 header{
-  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(test1.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(../Images/test1.jpg);
   background-position: center;
   background-size: cover;
   height: 200vh;
