--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,7 +22,7 @@ body{
 }
 header
 {
-  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("C:/Users/sanjay/Desktop/Project/Images/main.png");
+  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("../Images/main.png");
   height: 100vh;
   background-position: center;
   background-size: cover;
