--- a/static/CSS/gamepage.css
+++ b/static/CSS/gamepage.css
@@ -46,9 +46,9 @@ header
 }
 .main-nav li a
 {
-  color: #c40310;
+  color: #e67e22;
   text-decoration: none;
-  font-size: 90%;
+  font-size: 120%;
   font-weight: bold;
   margin-top: 20%;
 }
