--- a/static/CSS/gamelore.css
+++ b/static/CSS/gamelore.css
@@ -23,9 +23,9 @@ header{
 }
 .card-header li a
 {
-  color: #c40310;
+  color: #00000FFF;
   text-decoration: none;
-  font-size: 70%;
+  font-size: 90%;
   font-weight: bold;
 
 }
