--- a/static/CSS/gamerule.css
+++ b/static/CSS/gamerule.css
@@ -17,16 +17,16 @@ header
 {
   background-image:linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9)),url("../Images/main.png");
   height: 150vh;
-  background-position: center#c40310;
+  background-position: center#f8d983;
   background-size: cover;
 }
  h2
  {
 
   text-align: center;
-  color: #c40310;
+  color: #f8d983;
   position: absolute;
-  top : 1%;
+  top : 5%;
   left :30%;
   text-decoration: underline;
 
@@ -36,7 +36,7 @@ header
 {
   list-style: none;
   float: right;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .rules-nav li
 {
@@ -46,11 +46,11 @@ header
 }
 .rules-nav li a
 {
-  color: #c40310;
+  color: #e67e22;
   text-decoration: none;
-  font-size: 90%;
+  font-size: 100%;
   font-weight: bold;
-  margin-top: 20%;
+  margin-top: 30%;
 }
 
 .logo img{
@@ -65,7 +65,7 @@ header
   color: #e67e22;
   border-bottom: 2px solid  #e67e22;
   transition: all 0.5s ease-in;
-  padding: 15px 0;
+  padding: 15px 10px;
 }
 .gamerules
 {
@@ -73,16 +73,18 @@ width: 70%;
 margin-left: 15%;
 position: absolute;
 top: 20%;
-color:#e67e22;
+font-family: Verdana, Arial, Helvetica, sans-serif;
+font-size: 1.4em;
+color:#adc2bd;
 }
 
 .partone
 {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   text-decoration: underline;
   font-style: italic;
-  color: #4192f4;
+  color: #f8d983;
 }
 .partthree
 {
@@ -90,46 +92,46 @@ color:#e67e22;
   font-weight: bold;
   font-style: italic;
   font-family: BlackChancery;
-  color: #4192f4;
+  color: #f8d983;
 }
 .partfour
 {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   font-style: italic;
   text-decoration: underline;
-  color: #4192f4;
+  color: #f8d983;
 }
 .partfive
 {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   font-style: italic;
   text-decoration: underline;
-  color: #4192f4;
+  color: #f8d983;
 }
 .partsix
 
   {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     font-style: italic;
     text-decoration: underline;
-    color: #4192f4;
+    color: #f8d983;
   }
 .partseven
 {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   font-style: italic;
   text-decoration: underline;
-  color: #4192f4;
+  color: #f8d983;
 }
 .parteight
 {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   font-style: italic;
   text-decoration: underline;
-  color: #4192f4;
+  color: #f8d983;
 }
