--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -29,6 +29,7 @@ header
 }
 h1{
   color: white;
+  font-size: 40px;
 }
 
 .main-nav
@@ -44,9 +45,9 @@ h1{
 }
 .main-nav li a
 {
-  color: #c40310;
+  color: #e67e22;
   text-decoration: none;
-  font-size: 90%;
+  font-size: 120%;
   font-weight: bold;
   margin-top: 20%;
 }
@@ -79,6 +80,8 @@ h1{
 .buttonclass
 {
   margin-top:40px;
+  font-size: 28px;
+
 }
 .btn-lore:hover
 {
