--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -20,11 +20,11 @@ body{
   left:50%;
   transform: translate(-50%,-50%);
 }
-header
-{
-  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url('../Images/main.png');
-  height: 100vh;
-  background-position: center;
+html { 
+  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url('../Images/main.png') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 h1{
