--- a/static/CSS/gameover.css
+++ b/static/CSS/gameover.css
@@ -4,11 +4,6 @@
   padding:0;
 }
 
-.row
-{
-  max-width:1140px;
-  margin:0 auto;
-}
 body{
   font-family: tahoma;
 }
@@ -20,52 +15,18 @@ body{
   left:50%;
   transform: translate(-50%,-50%);
 }
-html { 
-  background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.0)),url('../Images/over.png') no-repeat center center fixed; 
+html {
+  background: linear-gradient(rgba(0,0,0,0.4),rgba(1,0,0,0.4)),url('(../Images/go.gif') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-h1{
-  color: white;
-  font-size: 40px;
-  align: center;
-}
-
-.main-nav
-{
-  list-style: none;
-  float: right;
-  margin-top: 10px;
-}
-.main-nav li
-{
-  display: inline-block;
-  margin-left: 205px;
-}
-.main-nav li a
-{
-  color: #e67e22;
-  text-decoration: none;
-  font-size: 120%;
-  font-weight: bold;
-  margin-top: 20%;
-}
-
 .logo img{
-  height :90px;
+  height :100px;
   float: left;
-  margin-top:10px;
-  transform: translate(-70%,10%);
-}
-
-.main-nav li a:hover
-{
-  color: #e67e22;
-  border-bottom: 2px solid  #e67e22;
-  transition: all 0.5s ease-in;
-  padding: 15px 0;
+  margin-top:40px;
+  transform: translate(30%,-300%);
 }
 
 .btn
@@ -80,11 +41,9 @@ h1{
 }
 .buttonclass
 {
-  margin-top:40px;
+  margin-top:290px;
   font-size: 28px;
-  align: center;
-
-}
+  }
 h1{
   color: white;
   font-size: 20px;
