--- a/static/CSS/gameover.css
+++ b/static/CSS/gameover.css
@@ -16,7 +16,7 @@ body{
   transform: translate(-50%,-50%);
 }
 html {
-  background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('../Images/go.gif') no-repeat center center fixed;
+  background: linear-gradient(rgba(0,0,0,0.4),rgba(1,0,0,0.4)),url('go.gif') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -25,8 +25,8 @@ html {
 .logo img{
   height :100px;
   float: left;
-  margin-top:40px;
-  transform: translate(30%,-300%);
+  margin-top:-34%;
+
 }
 
 .btn
@@ -35,15 +35,13 @@ html {
   padding :10px 30px;
   color: #e67e22;
   text-decoration: none;
-  border-radius: 12px;
-  background-color:linear-gradient(rgba(0,0,0,0.7),rgba(0, 0, 0, 0.7)),url("new.jpg");
-  margin-right: 15px;
+  border-radius: 10px;
+  margin-left: 10%;
 }
 .buttonclass
 {
-  margin-top:290px;
+  margin-top:35%;
   font-size: 28px;
-  text-align: center;
   }
 h1{
   color: white;
