--- a/static/CSS/gameover.css
+++ b/static/CSS/gameover.css
@@ -16,7 +16,7 @@ body{
   transform: translate(-50%,-50%);
 }
 html {
-  background: linear-gradient(rgba(0,0,0,0.4),rgba(1,0,0,0.4)),url('go.gif') no-repeat center center fixed;
+  background: linear-gradient(rgba(0,0,0,0.4),rgba(1,0,0,0.4)),url('../Images/go.gif') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
