--- a/static/CSS/congrats.css
+++ b/static/CSS/congrats.css
@@ -21,7 +21,7 @@ body{
   transform: translate(-50%,-50%);
 }
 html {
-  background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('final.gif') no-repeat center center fixed;
+  background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('../Images/final.gif') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
