--- a/static/CSS/congrats.css
+++ b/static/CSS/congrats.css
@@ -1,68 +1,60 @@
-*
+body
 {
-  margin:0;
-  padding:0;
+  background-image:linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.0)),url('../Images/congrats.png');
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
 }
-
-.row
+.logo
 {
-  max-width:1140px;
-  margin:0 auto;
-}
-body{
-  font-family: tahoma;
+  height: 90px;
 }
 .title
 {
-  position:absolute;
-  width : 1140px;
-  top: 50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+  color:white;
+  font-weight: bolder;
 }
-html {
-  background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('../Images/final.gif') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-h1{
-  color: white;
-  font-size: 40px;
-}
-
 .main-nav
 {
   list-style: none;
-  float: right;
-  margin-top: 10px;
 }
 .main-nav li
 {
   display: inline-block;
-  margin-left: 205px;
 }
 .main-nav li a
 {
   color: #e67e22;
   text-decoration: none;
-  font-size: 120%;
-  font-weight: bold;
-  margin-top: 20%;
+  font-weight: bolder;
+  font-size: larger;
 }
-
-.logo img{
-  height :90px;
-  float: left;
-  margin-top:10px;
-  transform: translate(-70%,10%);
-}
-
 .main-nav li a:hover
 {
   color: #e67e22;
   border-bottom: 2px solid  #e67e22;
   transition: all 0.5s ease-in;
-  padding: 15px 0;
+  padding: 0px 0px 15px 0px;
+}
+.btn-main
+{
+  border :1px solid #e67e22;
+  color: #e67e22;
+  text-decoration: none;
+  border-radius: 22px;
+}
+
+.btn-lore:hover
+{
+  background-color:#e67e22;
+  color: white;
+  transition: all 1.2s ease-in;
+}
+
+.btn-rules:hover
+{
+  background-color: #e67e22;
+  color: white;
+  transition: all 1.2s ease-in;
 }
