--- a/static/CSS/gamerule.css
+++ b/static/CSS/gamerule.css
@@ -66,7 +66,7 @@ html {
   color: #e67e22;
   border-bottom: 2px solid  #e67e22;
   transition: all 0.5s ease-in;
-  padding: 15px 10px;
+  padding: 0px 0px 15px 0px;
 }
 .gamerules
 {
