--- a/static/CSS/contactus.css
+++ b/static/CSS/contactus.css
@@ -1,59 +1,28 @@
-body{
-  width: 100%;
-}
-header
+body
 {
-  background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url("../Images/new.jpg");
+  background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('../Images/new.jpg');
+  height: 100%;
+  width: 100%;
   background-position: center;
   background-size: cover;
-  height: 100%;
 }
-.text-center
+.logo img
 {
- text-align: right;
+  height: 90px;
+}
+
+h2{
   color: #f4d942;
   font-weight: bold;
-  transform: translate(25%,235%);
   font-style: italic;
   font-family: tahoma;
   text-decoration: underline;
 }
 
-.groupnames
+.teamnames
 {
   text-align: left;
-  transform: translate(58%,55%);
-  font-size: 130%;
+  font-size: x-large;
   font-weight: bold;
   color: #79e845;
 }
-
-.logo img
-{
-  width: auto;
-  height: auto;
-  transform: translate(0%,-50%);
-}
-.main-nav
-{
-  list-style: none;
-  float: right;
-  margin-top: -35px;
-  transform: translateX(-10%);
-}
-.main-nav li
-{
-  display: inline-block;
-  margin-left: 70px;
-}
-.main-nav li a:hover
-
-  {
-    color: #e67e22;
-    text-decoration: underline;
-    font-size: 100%;
-    font-weight: bold;
-    margin-top: 10%;
-    transition: all 0.5s ease-in;
-    padding: 15px 0;
-  }
